force-app/main/default/objects/SmokeTestComplete__e/SmokeTestComplete__e.object-meta.xml
<CustomObject>
    <description>Published by the SmokeTestOrchestrator when the full smoke test suite finishes. Consumed by the AlertRoutingService to send notifications per SmokeTestAlertRoute__mdt configuration, by the WebhookCallbackHandler to fire outbound webhooks, and by the SmokeTestDashboard LWC to finalize the results view. Carries the overall pass/fail outcome, security score result, and rollback recommendation.</description>
    <label>Smoke Test Complete</label>
    <pluralLabel>Smoke Test Completes</pluralLabel>
</CustomObject>