force-app/main/default/objects/SmokeTestComplete__e/fields/ExecutionId__c.field-meta.xml
<CustomField>
    <fullName>ExecutionId__c</fullName>
    <description>18-character Salesforce ID of the completed SmokeTestExecution__c record. Published by: SmokeTestOrchestrator on suite completion. Consumed by: AlertRoutingService to load the execution record details for notification content; WebhookCallbackHandler to include in outbound webhook payload; SmokeTestDashboard LWC to finalize the results view for this execution.</description>
    <label>Execution ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>