force-app/main/default/objects/SmokeTestComplete__e/fields/FailedCount__c.field-meta.xml
<CustomField>
    <fullName>FailedCount__c</fullName>
    <description>Number of scenarios that failed in this execution run. Published by: SmokeTestOrchestrator. Consumed by: AlertRoutingService to determine if failure alerts should be dispatched; SmokeTestDashboard LWC for the failed count badge. A value greater than zero with OverallResult=Passed indicates all failures were non-Critical severity.</description>
    <label>Failed Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>