force-app/main/default/objects/SmokeTestComplete__e/fields/OverallResult__c.field-meta.xml
<CustomField>
    <fullName>OverallResult__c</fullName>
    <description>Final pass/fail result for the entire smoke test suite. Published by: SmokeTestOrchestrator after evaluating all scenario results and security score thresholds. Consumed by: AlertRoutingService to determine which SmokeTestAlertRoute__mdt records to activate; SmokeTestDashboard LWC to display the final pass/fail badge. Expected values: Passed, Failed, Aborted (max 50 characters).</description>
    <label>Overall Result</label>
    <length>50</length>
    <type>Text</type>
</CustomField>