force-app/main/default/objects/SmokeTestComplete__e/fields/PassedCount__c.field-meta.xml
<CustomField>
    <fullName>PassedCount__c</fullName>
    <description>Number of scenarios that passed in this execution run. Published by: SmokeTestOrchestrator. Consumed by: AlertRoutingService to include in notification content; SmokeTestDashboard LWC to display the final passed/failed breakdown.</description>
    <label>Passed Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>