force-app/main/default/objects/SmokeTestComplete__e/fields/RollbackRecommended__c.field-meta.xml
<CustomField>
    <fullName>RollbackRecommended__c</fullName>
    <description>True if the orchestrator recommends rolling back the deployment based on test outcomes, security score failure, and the DefaultRollbackPolicy from SmokeTestConfig__mdt. Published by: SmokeTestOrchestrator. Consumed by: AlertRoutingService to include rollback advisory in notifications; SmokeTestDashboard LWC to display the rollback recommendation banner.</description>
    <label>Rollback Recommended</label>
    <type>Checkbox</type>
</CustomField>