force-app/main/default/objects/SmokeTestComplete__e/fields/SecurityScoreMet__c.field-meta.xml
<CustomField>
    <fullName>SecurityScoreMet__c</fullName>
    <description>True if the post-deployment security score met both the absolute threshold (SecurityScoreAbsoluteThreshold__c) and relative threshold (SecurityScoreRelativeThreshold__c) from SmokeTestConfig__mdt. Published by: SmokeTestOrchestrator after evaluating SmokeTestSecurityScore__c. Consumed by: AlertRoutingService (drives Admin_SecurityAlerts route); WebhookCallbackHandler.</description>
    <label>Security Score Met</label>
    <type>Checkbox</type>
</CustomField>